--- a/sass/SingIn.sass
+++ b/sass/SingIn.sass
@@ -123,6 +123,7 @@
                     padding: 15px 0
                     text-align: center
                     a
+                        border: 0
                         text-decoration: none
                         color: #fff
                         font: 600 24px 'Manrope'
@@ -714,14 +715,14 @@
                     .footer__list1 ,.footer__list2
                         li
                             text-align: center
-                            font: 300 9px 'Manrope'
+                            font: 300 11px 'Manrope'
                             margin-bottom: 5px
                     .footer__list1
                         margin-right: 0//3vw //11.97px //215px
                         margin-bottom: 20px
                         height: min-content
                         li:first-child
-                            font: 500 10px 'Manrope'  
+                            font: 500 12px 'Manrope'  
                             margin-bottom: 12px
                             flex: 0
                         li:last-child
