--- a/css/Instruction.css
+++ b/css/Instruction.css
@@ -25,10 +25,15 @@
 }
 
 body {
+  position: relative;
   dispaly: grid;
   grid-template-rows: 1fr auto;
   min-height: 100vh;
   background: linear-gradient(186.67deg, rgba(245, 245, 245, 0.4) 17.93%, rgba(71, 140, 92, 0.4) 62.19%, rgba(245, 245, 245, 0.4) 107.52%);
+}
+
+html {
+  font-size: 24px;
 }
 
 .container {
@@ -262,12 +267,12 @@ body {
 }
 .container .main .main__section1 .section1__container .section1__button button {
   cursor: pointer;
-  font: 600 14px "Manrope";
+  font: 600 1.4vw "Manrope";
   color: #fff;
-  padding: 14px 60px;
+  padding: 20px 60px;
   border: 0;
   background: #1A5653;
-  border-radius: 30px;
+  border-radius: 930px;
 }
 .container .footer {
   padding: 3.12vw 6.16vw 4.25vw 4.16vw;
@@ -310,6 +315,87 @@ body {
 }
 .container .footer div .footer_wrapper .footer__list2 li:last-child {
   margin: 0;
+}
+
+.PopUp__container {
+  position: absolute;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100;
+  display: none;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.PopUp__container .PopUp {
+  z-index: 100;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: #fff;
+  padding: 40px;
+  width: 870px;
+  border-radius: 30px;
+  box-shadow: rgba(0, 0, 0, 0.8) 0 0 0 20000px;
+}
+.PopUp__container .PopUp .image__block {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 20px;
+}
+.PopUp__container .PopUp .image__block .PopUp__cross:hover {
+  cursor: pointer;
+}
+.PopUp__container .PopUp .block__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.PopUp__container .PopUp .block__text .PopUp__title {
+  width: max-content;
+  font-size: 1rem;
+  font: 400 1rem "Manrope";
+  margin-bottom: 60px;
+}
+.PopUp__container .PopUp .block__text .block__link {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+}
+.PopUp__container .PopUp .block__text .block__link .PopUp__link {
+  background-color: #1A5653;
+  padding: 18px 60px;
+  border-radius: 999px;
+  color: #fff;
+  font: 400 1rem "Manrope";
+  text-decoration: none;
+}
+.PopUp__container .PopUp .block__text .block__link .PopUp__link:hover {
+  background-color: #23706c;
+}
+.PopUp__container .PopUp .block__text .block__subText {
+  display: flex;
+  justify-content: center;
+}
+.PopUp__container .PopUp .block__text .block__subText .subText_1, .PopUp__container .PopUp .block__text .block__subText .subText_2 {
+  font: 600 1rem "Manrope";
+  text-decoration: none;
+  color: #8C8C8C;
+}
+.PopUp__container .PopUp .block__text .block__subText .subText_1 {
+  margin-right: 15px;
+  font: 400 1rem "Manrope";
+}
+.PopUp__container .PopUp .block__text .block__subText .subText_2:hover {
+  border-bottom: 1.5px solid #8C8C8C;
+}
+
+.popUp_2 .PopUp .block__text .PopUp__title {
+  margin-bottom: 0;
+}
+.popUp_2 .PopUp .block__text .image__wrapper {
+  margin-top: 40px;
 }
 
 .swiper-slide1_block::-webkit-scrollbar {
@@ -497,6 +583,7 @@ body {
   }
   .container .main .main__section1 .section1__container .section1__button button {
     font: 500 14px "Manrope";
+    padding: 15px 45px;
   }
 }
 @media screen and (max-width: 1300px) {
@@ -615,6 +702,66 @@ body {
   }
   .container .header .header__navigation a, .container .header .header__navigation p {
     font-size: 8px;
+  }
+  .PopUp__container {
+    padding: 0 10px;
+  }
+  .PopUp__container .PopUp {
+    border-radius: 20px;
+    padding: 30px;
+    width: 100%;
+    max-width: 650px;
+  }
+  .PopUp__container .PopUp .image__block {
+    display: flex;
+    justify-content: end;
+    margin-bottom: 25px;
+  }
+  .PopUp__container .PopUp .image__block .PopUp__cross {
+    height: 22px;
+  }
+  .PopUp__container .PopUp .image__block .PopUp__cross:hover {
+    cursor: pointer;
+  }
+  .PopUp__container .PopUp .block__text .PopUp__title {
+    width: max-content;
+    font: 400 0.83rem "Manrope";
+    margin-bottom: 45px;
+  }
+  .PopUp__container .PopUp .block__text .block__link {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+  .PopUp__container .PopUp .block__text .block__link .PopUp__link {
+    padding: 13px 40px;
+    font: 400 0.83rem "Manrope";
+  }
+  .PopUp__container .PopUp .block__text .block__link .PopUp__link:hover {
+    background-color: #23706c;
+  }
+  .PopUp__container .PopUp .block__text .block__subText {
+    display: flex;
+    justify-content: center;
+  }
+  .PopUp__container .PopUp .block__text .block__subText .subText_1, .PopUp__container .PopUp .block__text .block__subText .subText_2 {
+    font: 600 0.83rem "Manrope";
+  }
+  .PopUp__container .PopUp .block__text .block__subText .subText_1 {
+    margin-right: 15px;
+    font: 400 0.83rem "Manrope";
+  }
+  .PopUp__container .PopUp .block__text .block__subText .subText_2:hover {
+    border-bottom: 1.5px solid #8C8C8C;
+  }
+  .popUp_2 .PopUp .block__text .PopUp__title {
+    margin-bottom: 0;
+  }
+  .popUp_2 .PopUp .block__text .image__wrapper {
+    margin-top: 30px;
+  }
+  .popUp_2 .PopUp .block__text .image__wrapper img {
+    height: 65px;
   }
 }
 @media screen and (max-width: 769px) {
@@ -959,6 +1106,49 @@ body {
     font: 500 10px "Manrope";
     margin-bottom: 0;
   }
+  .PopUp__container {
+    padding: 0 10px;
+  }
+  .PopUp__container .PopUp {
+    border-radius: 20px;
+    padding: 20px;
+    width: 100%;
+    max-width: 500px;
+  }
+  .PopUp__container .PopUp .image__block {
+    margin-bottom: 25px;
+  }
+  .PopUp__container .PopUp .image__block .PopUp__cross {
+    height: 16px;
+  }
+  .PopUp__container .PopUp .block__text .PopUp__title {
+    width: max-content;
+    font: 400 0.58rem "Manrope";
+    margin-bottom: 35px;
+  }
+  .PopUp__container .PopUp .block__text .block__link {
+    margin-bottom: 20px;
+  }
+  .PopUp__container .PopUp .block__text .block__link .PopUp__link {
+    padding: 10px 30px;
+    font: 400 0.58rem "Manrope";
+  }
+  .PopUp__container .PopUp .block__text .block__subText .subText_1, .PopUp__container .PopUp .block__text .block__subText .subText_2 {
+    font: 600 0.58rem "Manrope";
+  }
+  .PopUp__container .PopUp .block__text .block__subText .subText_1 {
+    margin-right: 15px;
+    font: 400 0.58rem "Manrope";
+  }
+  .popUp_2 .PopUp .block__text .PopUp__title {
+    margin-bottom: 0;
+  }
+  .popUp_2 .PopUp .block__text .image__wrapper {
+    margin-top: 30px;
+  }
+  .popUp_2 .PopUp .block__text .image__wrapper img {
+    height: 55px;
+  }
 }
 @media screen and (max-width: 480px) {
   .container .header {
@@ -1263,7 +1453,7 @@ body {
   }
   .container .footer div .footer_wrapper .footer__list1 li, .container .footer div .footer_wrapper .footer__list2 li {
     text-align: center;
-    font: 300 9px "Manrope";
+    font: 300 11px "Manrope";
     margin-bottom: 5px;
   }
   .container .footer div .footer_wrapper .footer__list1 {
@@ -1272,11 +1462,53 @@ body {
     height: min-content;
   }
   .container .footer div .footer_wrapper .footer__list1 li:first-child {
-    font: 500 10px "Manrope";
+    font: 500 12px "Manrope";
     margin-bottom: 12px;
     flex: 0;
   }
   .container .footer div .footer_wrapper .footer__list1 li:last-child {
     margin: 0;
+  }
+  .PopUp__container {
+    padding: 0 10px;
+  }
+  .PopUp__container .PopUp {
+    border-radius: 20px;
+    padding: 20px;
+    width: 100%;
+    max-width: 300px;
+  }
+  .PopUp__container .PopUp .image__block {
+    margin-bottom: 20px;
+  }
+  .PopUp__container .PopUp .image__block .PopUp__cross {
+    height: 16px;
+  }
+  .PopUp__container .PopUp .block__text .PopUp__title {
+    font: 400 0.4rem "Manrope";
+    margin-bottom: 30px;
+  }
+  .PopUp__container .PopUp .block__text .block__link {
+    margin-bottom: 15px;
+  }
+  .PopUp__container .PopUp .block__text .block__link .PopUp__link {
+    padding: 10px 30px;
+    font: 400 0.4rem "Manrope";
+  }
+  .PopUp__container .PopUp .block__text .block__subText .subText_1, .PopUp__container .PopUp .block__text .block__subText .subText_2 {
+    font: 600 0.4rem "Manrope";
+  }
+  .PopUp__container .PopUp .block__text .block__subText .subText_1 {
+    margin-right: 15px;
+    font: 400 0.4rem "Manrope";
+  }
+  .popUp_2 .PopUp .block__text .PopUp__title {
+    margin-bottom: 0;
+  }
+  .popUp_2 .PopUp .block__text .image__wrapper {
+    margin-top: 20px;
+  }
+  .popUp_2 .PopUp .block__text .image__wrapper img {
+    height: 36px;
   }
 }/*# sourceMappingURL=Instruction.css.map */
