--- a/css/SingIn.css
+++ b/css/SingIn.css
@@ -148,6 +148,7 @@
   text-align: center;
 }
 .container .main .main__section1 .section1__wrapper .section1__enter a {
+  border: 0;
   text-decoration: none;
   color: #fff;
   font: 600 24px "Manrope";
@@ -878,7 +879,7 @@
   }
   .container .footer div .footer_wrapper .footer__list1 li, .container .footer div .footer_wrapper .footer__list2 li {
     text-align: center;
-    font: 300 9px "Manrope";
+    font: 300 11px "Manrope";
     margin-bottom: 5px;
   }
   .container .footer div .footer_wrapper .footer__list1 {
@@ -887,7 +888,7 @@
     height: min-content;
   }
   .container .footer div .footer_wrapper .footer__list1 li:first-child {
-    font: 500 10px "Manrope";
+    font: 500 12px "Manrope";
     margin-bottom: 12px;
     flex: 0;
   }
