--- a/sass/ReportPhoto.sass
+++ b/sass/ReportPhoto.sass
@@ -34,11 +34,9 @@
             margin-bottom: 15px
             .burger__container
                 display: none
-            .header__liFirst
-                //margin-right: 17.5vw//336px
-                font: bold 28px 'e-Ukraine'
-                color: #1A5653
-                margin-right: 40px
+            .header__logo
+                width: 250px
+                height: 100%
             .header__ol
                 display: flex
                 align-items: center
@@ -49,9 +47,14 @@
                         text-decoration: none
                         font: 400 1.1vw 'Manrope'
                         color: #1A5653
+                    a:hover 
+                        cursor: pointer
+                        border-bottom: 1px solid #1A5653
                 .header__li:last-child
                     margin: 0
                     cursor: pointer
+            
+
         .header__navigation
             a
                 color: black
@@ -130,9 +133,9 @@
         div
             display: flex
             justify-content: space-between
-            .header__liFirst
-                font: bold 28px 'e-Ukraine'
-                color: #fff
+            .header__logo
+                width: 250px
+                height: 55px
             .footer_wrapper
                 display: flex
                 .footer__list1 ,.footer__list2
@@ -154,6 +157,23 @@
                     li:last-child
                         margin: 0
 
+@media screen and ( max-width:1610px  )
+    .container
+        .header
+            margin-bottom: 70px
+            .nav
+                display: flex
+                justify-content: space-between
+                margin-bottom: 25px
+                .header__logo
+                    width: 200px
+                    margin-right: 30px
+        .footer
+            padding: 3.12vw 3.16vw 3.25vw 3.16vw
+            div
+                .header__logo
+                    width: 200px
+                    height: 44px
 
 @media screen and ( max-width:1280px  )//1236px
     .container
@@ -162,10 +182,9 @@
             .nav
                 display: flex
                 justify-content: space-between
-                .header__liFirst
-                    //margin-right: 17.5vw//336px
-                    font: bold 24px 'e-Ukraine'
-                    margin-right: 40px
+                .header__logo
+                    width: 120px
+                    margin-right: 30px
                 .header__ol
                     display: flex
                     align-items: center
@@ -269,10 +288,9 @@
             div
                 display: flex
                 justify-content: space-between
-                .header__liFirst
-                    font: bold 20px 'e-Ukraine'
-                    color: #fff
-                    margin-right: 40px
+                .header__logo
+                    width: 120px
+                    height: 27px
                 .footer_wrapper
                     display: flex
                     .footer__list1 ,.footer__list2
@@ -453,12 +471,10 @@
                 display: flex
                 justify-content: space-between
                 padding: 0//2.08vw 4.16vw 0 4.16vw       //40px 0 0 80px
-                .header__liFirst
+                .header__logo_off
                     display: none
-                    //margin-right: 17.5vw//336px
-                    font: bold 16px 'e-Ukraine'
-                    color: #fff
-                    margin-right: 0
+                .header__logo
+                    margin: 0
                 .burger__container
                     display: block
                     box-sizing: border-box
@@ -600,12 +616,9 @@
                 width: 100%
                 display: flex
                 justify-content: space-between
-                .header__liFirst
-                    display: block
-                    text-align: center
-                    font: bold 18px 'e-Ukraine'
-                    color: #fff
-                    margin-bottom:20px
+                .header__logo
+                    width: 120px
+                    height: 27px
                 .footer_wrapper
                     width: auto
                     display: flex
@@ -813,36 +826,27 @@
             display: flex
             justify-content: center
             padding: 40px 0 //1.5vw 2.08vw 3.10vw 2.08vw  //60px 80px 120px 80px
-            background: rgb(26, 86, 83)
-            border-top-left-radius: 10px//30px
-            border-top-right-radius: 10px//30px
             div
-                display: block
-                .header__liFirst
-                    display: block
-                    text-align: center
-                    font: bold 18px 'e-Ukraine'
-                    color: #fff
-                    margin: 0
+                display: flex
+                flex-direction: column
+                align-items: center
+                .header__logo
                     margin-bottom:20px
                 .footer_wrapper
+                    height: auto
                     display: block
                     .footer__list1 ,.footer__list2
                         li
                             text-align: center
-                            font: 300 9px 'Manrope'
+                            font: 300 11px 'Manrope'
                             margin-bottom: 5px
-                            a
-                                text-decoration: none
-                                color: rgb(245,245,245)
                     .footer__list1
                         margin-right: 0//3vw //11.97px //215px
                         margin-bottom: 20px
+                        height: min-content
                         li:first-child
-                            font: 500 10px 'Manrope'  
+                            font: 500 12px 'Manrope'  
                             margin-bottom: 12px
-                        li:last-child
-                            margin: 0
-                    .footer__list2
+                            flex: 0
                         li:last-child
                             margin: 0
