--- a/sass/SettingProfile.sass
+++ b/sass/SettingProfile.sass
@@ -123,6 +123,8 @@
                                 text-decoration: none
                                 font: 600 24px 'Manrope'
                                 color: #fff
+                                border: 0
+                                
                                 
     .footer
         padding: 3.12vw 6.16vw 4.25vw 4.16vw  //60px 80px 120px 80px
@@ -713,14 +715,14 @@
                     .footer__list1 ,.footer__list2
                         li
                             text-align: center
-                            font: 300 9px 'Manrope'
+                            font: 300 11px 'Manrope'
                             margin-bottom: 5px
                     .footer__list1
                         margin-right: 0//3vw //11.97px //215px
                         margin-bottom: 20px
                         height: min-content
                         li:first-child
-                            font: 500 10px 'Manrope'  
+                            font: 500 12px 'Manrope'  
                             margin-bottom: 12px
                             flex: 0
                         li:last-child
